src/objects/Save_the_Date__c.object
<CustomObject>
    <description># 471</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>When ‘Available w/Comments’ is selected from the “Response” picklist, the “Comments” field shall be required.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competition_Fiscal_Year__c</fullName>
        <label>Competition Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competition_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>#471</description>
        <label>Competition Name</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Save the Date</relationshipLabel>
        <relationshipName>Save_the_Date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Program_Name__c</fullName>
        <formula>Competition_Name__r.Corporate_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expert_Reviewer_Name__c</fullName>
        <formula>Reviewer_Pool__r.Expert_Reviewer_Name__r.FirstName&amp; &apos; &apos; &amp;Reviewer_Pool__r.Expert_Reviewer_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expert Reviewer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expert_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Save the date functionality</description>
        <label>Expert Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Save the Date</relationshipLabel>
        <relationshipName>Save_the_Date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>Text(Competition_Name__r.Fiscal_Yr__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <picklist>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available w/Comments</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer_Pool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Save the date functionality</description>
        <label>Reviewer Pool</label>
        <referenceTo>Reviewer_Pool__c</referenceTo>
        <relationshipLabel>Save the Date</relationshipLabel>
        <relationshipName>Save_the_Date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <label>Role Type</label>
        <picklist>
            <picklistValues>
                <fullName>Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Expertise Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Save_the_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to NOFO Group for implementing save the date functionality</description>
        <label>NOFO Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>Save the Date</relationshipLabel>
        <relationshipName>Save_the_Date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible - COI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Save the Date</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Save the Date ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Save the Date</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CommentsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Response__c , &apos;Available w/Comments&apos;),
ISBLANK(Comments__c ))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please Enter Comments when Response is selected as Available with Comments.</errorMessage>
    </validationRules>
</CustomObject>